--- a/app/src/main/res/layout/cinema_item.xml
+++ b/app/src/main/res/layout/cinema_item.xml
@@ -18,6 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/CinemaName"
         android:textSize="16sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="#363636"
         android:text="location"/>
     <RelativeLayout
@@ -46,9 +48,10 @@
 
     <Button
         android:id="@+id/SelectTime"
-        android:layout_width="70dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/bollen"
+        android:layout_marginLeft="45px"
         android:background="@drawable/buyticket"
         android:width="60dp"
         android:height="30dp"
