--- a/app/src/main/res/layout/cinema_item.xml
+++ b/app/src/main/res/layout/cinema_item.xml
@@ -51,7 +51,7 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/bollen"
-        android:layout_marginLeft="45px"
+        android:layout_marginLeft="15dp"
         android:background="@drawable/buyticket"
         android:width="60dp"
         android:height="30dp"
