--- a/app/src/main/res/layout/activity_my_card.xml
+++ b/app/src/main/res/layout/activity_my_card.xml
@@ -60,7 +60,7 @@
         />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_card"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/et_3"
