--- a/app/src/main/res/layout/ticket_item.xml
+++ b/app/src/main/res/layout/ticket_item.xml
@@ -59,7 +59,7 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/SelectTime"
+        android:id="@+id/qr"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/details"
