--- a/app/src/main/res/layout/activity_film_list.xml
+++ b/app/src/main/res/layout/activity_film_list.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".FilmListActivity">
+
+    <EditText
+        android:id="@+id/et_1"
+        android:layout_width="310dp"
+        android:layout_height="45dp"
+        android:hint="Please enter film's name"
+        android:background="@drawable/bg_username"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:drawablePadding="5dp"
+        android:drawableLeft="@drawable/search"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"/>
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/et_1"
+        android:layout_marginTop="10dp"
+        android:text="search" />
+
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/et_1"
         android:id="@+id/listview"
         />
-</LinearLayout>
+</RelativeLayout>
