--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageView
+
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:src="@drawable/logo"
+        android:layout_marginBottom="360dp"
+        />
+
 
     <Button
         android:id="@+id/register"
@@ -23,8 +31,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="340dp"
         android:layout_marginEnd="43dp"
+        android:background="@drawable/bg_username"
         android:ems="10"
-        android:hint="Password"
+        android:hint="  Password"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -38,8 +47,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="244dp"
         android:layout_marginEnd="43dp"
+        android:background="@drawable/bg_username"
         android:ems="10"
-        android:hint="Username"
+        android:hint="  Username"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -64,6 +74,8 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:background="@drawable/buyticket"
+            android:textSize="15sp"
+            android:textColor="#FFF"
             android:text="film"
             />
         <Button
@@ -72,6 +84,8 @@
             android:layout_height="50dp"
             android:layout_toRightOf="@id/film"
             android:layout_marginLeft="35dp"
+            android:textSize="15sp"
+            android:textColor="#FFF"
             android:background="@drawable/buyticket"
             android:text="My ticket"
              />
@@ -81,6 +95,8 @@
             android:layout_height="50dp"
             android:layout_toRightOf="@id/my_ticket"
             android:layout_marginLeft="35dp"
+            android:textSize="15sp"
+            android:textColor="#FFF"
             android:background="@drawable/buyticket"
             android:text="My card"
             />
