--- a/app/src/main/res/layout/activity_pay2.xml
+++ b/app/src/main/res/layout/activity_pay2.xml
@@ -22,6 +22,7 @@
         android:background="@drawable/buyticket"
         android:layout_marginTop="200dp"
         android:layout_width="match_parent"
+        android:textColor="#FFF"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:text="Offline cash payment" />
@@ -31,6 +32,7 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/buyticket"
         android:layout_marginTop="280dp"
+        android:textColor="#FFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25sp"
