--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,14 @@
     tools:context=".MainActivity">
 
 
+    <ImageView
+
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:src="@drawable/logo"
+        android:layout_marginBottom="360dp"
+        />
+
     <Button
         android:id="@+id/register"
         android:layout_width="141dp"
@@ -25,7 +33,8 @@
         android:layout_marginTop="340dp"
         android:layout_marginEnd="43dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="  Password"
+        android:background="@drawable/bg_username"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -40,7 +49,8 @@
         android:layout_marginTop="244dp"
         android:layout_marginEnd="43dp"
         android:ems="10"
-        android:hint="Username"
+        android:hint="  Username"
+        android:background="@drawable/bg_username"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
